fix brand info overflow

--- a/src/media/css/feed.styl
+++ b/src/media/css/feed.styl
@@ -700,7 +700,7 @@ $vertical-tile-margin = 10px;
         }
         .feed .mkt-tile {
             .info {
-                width: 260px;
+                width: 210px;
             }
             .elliflow {
                 max-width: 180px;
